--- a/src/app/components/side-bar/side-bar.component.html
+++ b/src/app/components/side-bar/side-bar.component.html
@@ -2,17 +2,10 @@
 <ul
     [ngClass]="
     status
-      ? 'transform translate-x-0 rounded  ease-in-out transition duration-500 flex justify-start items-start w-full sm:w-64 border-r border-b border-gray-200  flex-col h-full'
-      : '-translate-x-full rounded  ease-in-out transition duration-500 flex justify-start items-start w-full sm:w-64 border-r border-b border-gray-200  flex-col h-full transform'
+      ? 'sidebar-menu-expand'
+      : 'sidebar-menu-close'
   ">
   <div class="sidebar-menu-header">
-    <svg width="36" height="36" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5}
-         stroke="currentColor"
-         className="w-6 h-6">
-      <path strokeLinecap="round" strokeLinejoin="round"
-            d="M2.25 7.125C2.25 6.504 2.754 6 3.375 6h6c.621 0 1.125.504 1.125 1.125v3.75c0 .621-.504 1.125-1.125 1.125h-6a1.125 1.125 0 01-1.125-1.125v-3.75zM14.25 8.625c0-.621.504-1.125 1.125-1.125h5.25c.621 0 1.125.504 1.125 1.125v8.25c0 .621-.504 1.125-1.125 1.125h-5.25a1.125 1.125 0 01-1.125-1.125v-8.25zM3.75 16.125c0-.621.504-1.125 1.125-1.125h5.25c.621 0 1.125.504 1.125 1.125v2.25c0 .621-.504 1.125-1.125 1.125h-5.25a1.125 1.125 0 01-1.125-1.125v-2.25z" />
-    </svg>
-
     <h3 class="sidebar-menu-title">dashboard</h3>
   </div>
 
