--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,3 +1,3 @@
-<app-restaurants></app-restaurants>
+<app-restaurants class="flex w-full h-full flex-col sm:px-6 md:px-12 gap-6"></app-restaurants>
 <!-- <app-add-restaurant></app-add-restaurant> -->
 <!-- <app-edit-restaurant></app-edit-restaurant> -->
