--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,1 +1,36 @@
-<p>register works!</p>
+<div class="bg-grey-50 min-h-screen flex flex-col">
+  <div class="container max-w-sm mx-auto flex-1 flex flex-col items-center justify-center px-2">
+    <form (ngSubmit)="register()"
+          #registerForm
+          class="bg-indigo-700 px-6 py-8 rounded shadow-md text-black w-full">
+      <h1 class="mb-8 text-3xl text-center text-white uppercase">
+        Register
+      </h1>
+      <input
+             type="email"
+             class="block border border-grey-light w-full p-3 rounded mb-4"
+             name="username"
+             required
+             [(ngModel)]="user.username"
+             placeholder="Email / Username" />
+
+      <input
+             type="password"
+             class="block border border-grey-light w-full p-3 rounded mb-4"
+             name="password"
+             [(ngModel)]="user.password"
+             placeholder="Password" />
+      <input
+             type="password"
+             class="block border border-grey-light w-full p-3 rounded mb-4"
+             name="confirm_password"
+             [(ngModel)]="user.confirm_password"
+             placeholder="Confirm Password" />
+
+      <button
+              type="submit"
+              class="w-full text-center py-3 rounded bg-white text-black focus:outline-none my-1">
+        Create Account</button>
+    </form>
+  </div>
+</div>
