--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,36 +1,86 @@
 <div class="bg-grey-50 min-h-screen flex flex-col">
   <div class="container max-w-sm mx-auto flex-1 flex flex-col items-center justify-center px-2">
-    <form (ngSubmit)="register()"
-          #registerForm
-          class="bg-indigo-700 px-6 py-8 rounded shadow-md text-black w-full">
+    <!-- Registration Form -->
+    <form [formGroup]="registerForm" (ngSubmit)="register()"
+          class="bg-indigo-700 px-6 py-8 rounded shadow-md text-white uppercase w-full">
       <h1 class="mb-8 text-3xl text-center text-white uppercase">
         Register
       </h1>
-      <input
-             type="email"
-             class="block border border-grey-light w-full p-3 rounded mb-4"
-             name="username"
-             required
-             [(ngModel)]="user.username"
-             placeholder="Email / Username" />
-
-      <input
-             type="password"
-             class="block border border-grey-light w-full p-3 rounded mb-4"
-             name="password"
-             [(ngModel)]="user.password"
-             placeholder="Password" />
-      <input
-             type="password"
-             class="block border border-grey-light w-full p-3 rounded mb-4"
-             name="confirm_password"
-             [(ngModel)]="user.confirm_password"
-             placeholder="Confirm Password" />
-
-      <button
-              type="submit"
-              class="w-full text-center py-3 rounded bg-white text-black focus:outline-none my-1">
-        Create Account</button>
+      <span *ngIf="showMsg" class="text-white">
+        {{ msg }}
+      </span>
+      <!-- Email -->
+      <div class="mb-3">
+        <label class="inline-block mb-2">Email</label>
+        <input
+               [formControl]="username"
+               type="email"
+               class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition
+              duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
+               placeholder="Enter Email" />
+        <div *ngIf="registerForm.controls.username.touched && 
+                    registerForm.controls.username.dirty && 
+                    registerForm.controls.username.errors?.['required']"
+             class="text-xs normal-case text-red-100">
+          Field is required
+        </div>
+        <div *ngIf="registerForm.controls.username.errors?.['email']"
+             class="text-xs normal-case text-red-100">
+          Field requires an email
+        </div>
+      </div>
+      <div class="mb-3">
+        <label class="inline-block mb-2">First name</label>
+        <input
+               [formControl]="firstname"
+               type="text"
+               class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition
+              duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
+               placeholder="First Name" />
+        <div *ngIf="registerForm.controls.firstname.touched && 
+                    registerForm.controls.firstname.dirty && 
+                    registerForm.controls.firstname.errors?.['required']"
+             class="text-xs normal-case text-red-100">
+          Field is required
+        </div>
+      </div>
+      <div class="mb-3">
+        <label class="inline-block mb-2">Last name</label>
+        <input
+               [formControl]="lastname"
+               type="text"
+               class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition
+              duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
+               placeholder="Enter Email" />
+        <div *ngIf="registerForm.controls.lastname.touched && 
+                    registerForm.controls.lastname.dirty && 
+                    registerForm.controls.lastname.errors?.['required']"
+             class="text-xs normal-case text-red-100">
+          Field is required
+        </div>
+      </div>
+      <!-- Password -->
+      <div class="mb-3">
+        <label class="inline-block mb-2">Password</label>
+        <input
+               [formControl]="password"
+               type="password"
+               class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition
+              duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
+               placeholder="Password" />
+        <div *ngIf="registerForm.controls.password.touched && 
+                    registerForm.controls.password.dirty && 
+                    registerForm.controls.password.errors?.['required']"
+             class="text-xs normal-case text-red-100">
+          Password is required
+        </div>
+      </div>
+      <button type="submit"
+              [disabled]="registerForm.invalid"
+              class="block w-full bg-indigo-400 text-white py-1.5 px-3 rounded transition
+            hover:bg-indigo-500 disabled:opacity-50">
+        Submit
+      </button>
     </form>
   </div>
 </div>
