added login & register form to home

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,1 +1,8 @@
-<p>login works!</p>
+<!-- <div class="center-container"> -->
+
+<form class="form">
+  <input class="input input-effect" placeholder="Email" />
+  <input class="input input-effect" placeholder="Password" />
+  <button class="btn btn-effect">Submit</button>
+</form>
+<!-- </div> -->
