--- a/src/app/pages/register/register.component.html
+++ b/src/app/pages/register/register.component.html
@@ -1,6 +1,22 @@
-<div class="bg-grey-50 min-h-screen flex flex-col">
+<!-- <div class="center-container"> -->
+
+<form class="form">
+  <input class="input input-effect" placeholder="Email" />
+  <input class="input input-effect" placeholder="First Name" />
+  <input class="input input-effect" placeholder="Last Name" />
+  <input class="input input-effect" placeholder="Password" />
+  <input class="input input-effect" placeholder="Confirm Password" />
+  <button class="btn btn-effect">Submit</button>
+</form>
+<!-- </div> -->
+
+
+
+
+
+
+<!-- <div class="bg-grey-50 min-h-screen flex flex-col">
   <div class="container max-w-sm mx-auto flex-1 flex flex-col items-center justify-center px-2">
-    <!-- Registration Form -->
     <form [formGroup]="registerForm" (ngSubmit)="register()"
           class="bg-indigo-700 px-6 py-8 rounded shadow-md text-white uppercase w-full">
       <h1 class="mb-8 text-3xl text-center text-white uppercase">
@@ -9,7 +25,6 @@
       <span *ngIf="showMsg" class="text-white">
         {{ msg }}
       </span>
-      <!-- Email -->
       <div class="mb-3">
         <label class="inline-block mb-2">Email</label>
         <input
@@ -59,7 +74,6 @@
           Field is required
         </div>
       </div>
-      <!-- Password -->
       <div class="mb-3">
         <label class="inline-block mb-2">Password</label>
         <input
@@ -83,4 +97,4 @@
       </button>
     </form>
   </div>
-</div>
+</div> -->
