--- a/src/app/pages/register/register.component.scss
+++ b/src/app/pages/register/register.component.scss
@@ -2,12 +2,8 @@
   @apply flex w-full flex-col items-center justify-center gap-y-3 px-8 font-bold text-black;
 }
 
-.input {
-  @apply mt-4 mb-2 w-10/12 border-collapse border-b-2 border-solid border-black bg-transparent py-2 text-xl text-black placeholder-black placeholder-opacity-30;
-}
-
-.input-effect {
-  @apply focus-visible:border-[rgba(109,24,255,0.82)] focus-visible:outline-none;
+.input-wrap {
+  @apply w-10/12;
 }
 
 .btn {
