--- a/src/app/shared/input/input.component.html
+++ b/src/app/shared/input/input.component.html
@@ -7,16 +7,16 @@
 
 
 <ng-container *ngIf="control.touched && control.dirty">
-  <p class="text-red-400" *ngIf="control.errors?.['pattern']">
+  <p class="text-red-400 py-1" *ngIf="control.errors?.['pattern']">
     Passwords must be at least 8 characters long, have 1
     uppercase letter, 1 lowercase letter, 1 number and a special character.
   </p>
   <p *ngIf="control.errors?.['required']"
-     class="text-red-400">
+     class="text-red-400  py-1">
     Field is required
   </p>
   <p *ngIf="control.errors?.['minlength']"
-     class="text-red-400">
+     class="text-red-400  py-1">
     The value you inputted is
     {{ control.errors?.['minlength'].actualLength }}
     characters long.
@@ -24,19 +24,19 @@
     {{ control.errors?.['minlength'].requiredLength }}
     characters long.
   </p>
-  <p *ngIf="control.errors?.['email']" class="text-red-400">
+  <p *ngIf="control.errors?.['email']" class="text-red-400  py-1">
     You must enter a valid email. e.g. yourname@gmail.com
   </p>
-  <p *ngIf="control.errors?.['min']" class="text-red-400">
+  <p *ngIf="control.errors?.['min']" class="text-red-400 py-1">
     Value too low.
   </p>
-  <p *ngIf="control.errors?.['max']" class="text-red-400">
+  <p *ngIf="control.errors?.['max']" class="text-red-400 py-1">
     Value too high.
   </p>
-  <p *ngIf="control.errors?.['noMatch']" class="text-red-400">
+  <p *ngIf="control.errors?.['noMatch']" class="text-red-400 py-1">
     Passwords do not match.
   </p>
-  <p *ngIf="control.errors?.['emailTaken']" class="text-red-400">
+  <p *ngIf="control.errors?.['emailTaken']" class="text-red-400 py-1">
     Email taken. Please try another email.
   </p>
 </ng-container>
