--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,5 +1,7 @@
 <form [formGroup]="loginForm" (ngSubmit)="login()" class="form">
   <app-input class="input-wrap" [control]="userName" placeholder="Email / UserName"></app-input>
   <app-input class="input-wrap" [control]="password" placeholder="Password"></app-input>
-  <button class="btn btn-effect" [disabled]="loginForm.invalid">Submit</button>
+  <button *ngIf="loginForm.invalid" class="btn" [disabled]="loginForm.invalid">Login</button>
+  <button *ngIf="!loginForm.invalid" class="btn btn-effect">Login</button>
+  <a class="forgot" (click)="forgot()">forgot password</a>
 </form>
