Added login auth, route and connect with server

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,3 +1,10 @@
-<app-restaurants class="flex w-full h-full flex-col sm:px-6 md:px-12 gap-6"></app-restaurants>
+<section class="topbar-wrap">
+  <app-top-bar class="topbar-content-wrap" role="banner"></app-top-bar>
+</section>
+<section class="section-container">
+  <app-side-bar class="sidebar-wrap"></app-side-bar>
+  <app-restaurants class="main-content-wrap"></app-restaurants>
+</section>
+
 <!-- <app-add-restaurant></app-add-restaurant> -->
 <!-- <app-edit-restaurant></app-edit-restaurant> -->
