--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -1,10 +1,6 @@
 <!-- SECTION BREAK  -->
 <ul
-    [ngClass]="
-    status
-      ? 'sidebar-menu-expand'
-      : 'sidebar-menu-close'
-  ">
+    [ngClass]="status ? 'sidebar-menu-expand' : 'sidebar-menu-close'">
   <div class="sidebar-menu-header">
     <h3 class="sidebar-menu-title">dashboard</h3>
   </div>
@@ -63,7 +59,7 @@
           <path strokeLinecap="round" strokeLinejoin="round" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
         </svg>
 
-        <label class="sidebar-menu-label">Logout</label>
+        <label class="sidebar-menu-label" (click)="logout()">Logout</label>
       </li>
     </div>
   </div>
