Add routes and routing to to sidebar

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,10 +1,1 @@
-<section class="topbar-wrap">
-  <app-top-bar class="topbar-content-wrap" role="banner"></app-top-bar>
-</section>
-<section class="section-container">
-  <app-side-bar class="sidebar-wrap"></app-side-bar>
-  <app-restaurants class="main-content-wrap"></app-restaurants>
-</section>
-
-<!-- <app-add-restaurant></app-add-restaurant> -->
-<!-- <app-edit-restaurant></app-edit-restaurant> -->
+<h1> Overview / Home </h1>
