--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,21 +1,9 @@
-<!-- router - START -->
-<router-outlet></router-outlet>
-<!-- register view  -->
-
-<!-- signup view  -->
-
-<!-- dashbaord view - START -->
-
-<!-- sidebar -->
-<!-- main content - START -->
-<!-- list restaurants -->
-<!-- add restaurant -->
-<!-- edit resturant -->
-<!-- add dish -->
-<!-- edit dish -->
-<!-- list dishes -->
-<!-- main content - END -->
-
-<!-- dashboard view - END -->
-
-<!-- router - END -->
+<section class="topbar-wrap">
+  <app-top-bar class="topbar-content-wrap" role="banner"></app-top-bar>
+</section>
+<section class="section-container">
+  <app-side-bar class="sidebar-wrap"></app-side-bar>
+  <article class="main-content-wrap">
+    <router-outlet></router-outlet>
+  </article>
+</section>
