--- a/src/app/pages/restaurants/restaurants.component.html
+++ b/src/app/pages/restaurants/restaurants.component.html
@@ -5,7 +5,7 @@
   <thead class="w-full">
     <tr tabindex="0" class="tr-head">
       <th class="tr-head-title w-1/12">id</th>
-      <th class="tr-head-title w-3/12">restaurant name</th>
+      <th class="tr-head-title w-3/12">restaurant</th>
       <th class="tr-head-title w-4/12">address</th>
       <th class="tr-head-title w-1/12">phone</th>
       <th class="tr-head-title w-1/12 justify-center flex">revenue</th>
@@ -15,8 +15,7 @@
   <tbody class="w-full">
     <tr class="tr-body">
       <td class="td-body w-1/12">
-        <input type="checkbox"
-               class="td-checkbox"
+        <input type="checkbox" class="td-checkbox"
                onclick="tableInteract(this)" />
       </td>
       <td class="td-body w-3/12">
