--- a/src/app/side-bar/side-bar.component.scss
+++ b/src/app/side-bar/side-bar.component.scss
@@ -1,5 +1,6 @@
 .sidebar-menu-expand {
-  @apply flex h-[calc(100vh-90px)] w-full  translate-x-0 transform flex-col items-start justify-start rounded border-r border-b border-gray-200 transition duration-500  ease-in-out sm:w-64;
+  background-color: ghostwhite;
+  @apply flex h-[calc(100vh-90px)] w-full translate-x-0 transform flex-col items-start justify-start rounded border-r border-b border-gray-200 transition duration-500  ease-in-out sm:w-64;
 }
 
 .sidebar-menu-close {
