--- a/src/styles.scss
+++ b/src/styles.scss
@@ -31,5 +31,5 @@ h6 {
 }
 
 .section-container {
-  @apply top-80 left-0 flex min-h-[calc(100vh-70px)] w-full flex-initial flex-row px-8;
+  @apply top-80 left-0 flex min-h-[calc(100vh-70px)] w-full flex-initial flex-row;
 }
