--- a/src/app/side-bar/side-bar.component.html
+++ b/src/app/side-bar/side-bar.component.html
@@ -1,9 +1,9 @@
 <!-- SECTION BREAK  -->
 <ul
     [ngClass]="status ? 'sidebar-menu-expand' : 'sidebar-menu-close'">
-  <div class="sidebar-menu-header">
-    <h3 class="sidebar-menu-title">dashboard</h3>
-  </div>
+  <!-- <div class="sidebar-menu-header"> -->
+  <h2 class="menu-header">dashboard</h2>
+  <!-- </div> -->
 
   <div class="sidebar-menu-body">
     <li class="sidebar-menu-li">
