--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,31 +1,37 @@
 .topbar-wrap {
-  @apply sticky top-0 left-0 z-50 h-20 w-full  bg-indigo-700;
+  @apply sticky top-0 left-0 z-50 bg-indigo-700;
 }
 
 .topbar-content-wrap {
-  @apply flex items-center;
+  @apply flex h-full items-center py-2 px-4;
 }
 
 .close-sidebar {
-  @apply absolute z-40 flex h-full w-12 items-center justify-center hover:bg-[#f8f8ff];
+  @apply absolute z-40 flex h-full w-9 items-center justify-center hover:bg-[#f8f8ff];
 }
 
 .open-sidebar {
-  @apply absolute z-40 flex h-full w-0 items-center justify-center hover:bg-gray-200;
-}
-
-.hide-sidebar {
-  @apply relative hidden;
-}
-
-.expand-sidebar {
-  @apply relative h-full w-2/12;
+  left: 20%;
+  top: 70px;
+  @apply absolute z-40 flex h-full w-9 hover:bg-[#f8f8ff];
 }
 
 .content-full {
-  @apply px-16;
+  @apply h-full w-full;
 }
 
 .content-reduce {
-  @apply pl-[18%] pr-16;
+  @apply pr-6 pl-[25%];
 }
+
+.hide-sidebar {
+  @apply hidden;
+}
+
+.expand-sidebar {
+  @apply absolute top-20 z-30 ml-4 w-1/5;
+}
+
+/* .content-reduce {
+  @apply pl-[20%] pr-16;
+} */
